# Arduino-RPI-REST-API

./: postman.json  unit_test.c
Code IoT-software/: upload.bat
Code IoT-software/eindopdracht/: Makefile  acceptation_test_arduino.py
Code IoT-software/eindopdracht/arduino_server/: abnf.c  abnf.h  arduino_server.ino  arduino_wrapper.cpp  arduino_wrapper.h  buffermock.c  buffermock.h  cli.bat  cserver.c  cserver.h  request.h  sensors.ino  serial_wrapper.cpp  token.c  welford_online.c  welford_online.h
Code IoT-software/eindopdracht/rpi_server/: sensor_data.db  server.py
Code IoT-software/sensors/: sensors.ino
Code IoT-software/test/: welford_online.c  welford_online.h
Code_IoT-software/eindopdracht/: codekwaliteitseisen Rule of 10.docx  http.sh
Code_IoT-software/eindopdracht/arduino_server/: abnf.c  abnf.h  arduino_server.ino  arduino_wrapper.cpp  buffermock.h  cli.bat  cserver.c  cserver.h  request.h  welford_online.c
Code_IoT-software/eindopdracht_abnf_failure/: acceptation_test_rpi.py  postman.json
Code_IoT-software/sensors/: sensors.ino
Code_IoT-software/test/: main.c  test_welford
Code_IoT-software/test_abnf/: Makefile  acceptation_test_arduino.py  unit_test
arduino_server/: arduino_wrapper.cpp  arduino_wrapper.h  cli.bat  cserver.h  findmissing.ps1  leds.ino  request.h  sensors.ino  token.h  welford_online.c  welford_online.h
code/Beroepsproduct/: Debug opdracht.docx  problems.txt
code/Microcontrollers/microcontrollers_vergelijking/RPI_pinflip_c/: CMakeLists.txt  pinflip.c
laptop/: laptop.py
rpi_server/: server.py
(+160 files in other folders)
